[gd_scene load_steps=11 format=2]

[ext_resource path="res://ScavengeButton.gd" type="Script" id=1]
[ext_resource path="res://Stone.tscn" type="PackedScene" id=2]
[ext_resource path="res://InventoryButton.gd" type="Script" id=3]
[ext_resource path="res://Stick.tscn" type="PackedScene" id=4]
[ext_resource path="res://Inventory.gd" type="Script" id=5]
[ext_resource path="res://InventoryList.gd" type="Script" id=6]
[ext_resource path="res://Player.gd" type="Script" id=7]
[ext_resource path="res://Crafting.gd" type="Script" id=8]
[ext_resource path="res://CraftingButton.gd" type="Script" id=9]
[ext_resource path="res://StatsButton.gd" type="Script" id=10]

[node name="Main" type="Node2D"]

[node name="Player" type="Node2D" parent="."]
script = ExtResource( 7 )

[node name="ScavengeButton" type="Button" parent="."]
margin_left = 396.176
margin_top = 289.173
margin_right = 507.176
margin_bottom = 330.173
text = "Scavenge"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="ScavengeButton"]
modulate = Color( 1, 1, 1, 0 )
margin_left = -0.920029
margin_top = 0.227055
margin_right = 110.08
margin_bottom = 40.2271
color = Color( 0.054902, 1, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Stick" parent="." groups=[
"items",
] instance=ExtResource( 4 )]
position = Vector2( -82.2378, 25.211 )

[node name="Stone" parent="." groups=[
"items",
] instance=ExtResource( 2 )]
position = Vector2( -83.9196, 39.0858 )

[node name="Plant Fiber" parent="." groups=[
"items",
] instance=ExtResource( 2 )]
position = Vector2( -83.9196, 39.0858 )

[node name="Berries" parent="." groups=[
"items",
] instance=ExtResource( 2 )]
position = Vector2( -83.9196, 39.0858 )

[node name="Flint" parent="." groups=[
"items",
] instance=ExtResource( 2 )]
position = Vector2( -83.9196, 39.0858 )

[node name="Crafting" type="Node2D" parent="."]
show_behind_parent = true
z_index = -1
script = ExtResource( 8 )

[node name="Panel" type="Panel" parent="Crafting"]
margin_right = 1023.0
margin_bottom = 585.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeList" type="ItemList" parent="Crafting/Panel"]
margin_left = 4.0
margin_top = 319.0
margin_right = 648.0
margin_bottom = 587.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Crafting Window Label" type="RichTextLabel" parent="Crafting/Panel"]
margin_left = 392.058
margin_top = 5.99661
margin_right = 615.058
margin_bottom = 57.9966
text = "Crafting"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeDetailWindow" type="Panel" parent="Crafting/Panel"]
margin_left = 651.0
margin_top = 326.0
margin_right = 1013.0
margin_bottom = 579.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeDetailLabel" type="RichTextLabel" parent="Crafting/Panel/RecipeDetailWindow"]
margin_left = -0.749146
margin_top = -4.4949
margin_right = 264.251
margin_bottom = 23.5051
text = "Recipe Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RecipeComponentList" type="ItemList" parent="Crafting/Panel/RecipeDetailWindow"]
margin_left = 4.0
margin_top = 15.0
margin_right = 361.0
margin_bottom = 255.0

[node name="Stats" type="Node2D" parent="."]
visible = false
z_index = -1

[node name="Panel" type="Panel" parent="Stats"]
margin_right = 1023.0
margin_bottom = 596.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatWindow" type="ItemList" parent="Stats/Panel"]
margin_left = 649.78
margin_top = 318.508
margin_right = 1018.78
margin_bottom = 589.508
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Window Label" type="RichTextLabel" parent="Stats/Panel"]
margin_left = 392.058
margin_top = 5.99661
margin_right = 615.058
margin_bottom = 57.9966
text = "Stats
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Node2D" parent="."]
visible = false
position = Vector2( -0.559448, -1.40921 )
script = ExtResource( 5 )

[node name="Panel" type="Panel" parent="Inventory"]
margin_left = 4.42511
margin_top = 4.0
margin_right = 1019.43
margin_bottom = 594.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InventoryList" type="PanelContainer" parent="Inventory/Panel"]
margin_left = 2.0
margin_top = 5.0
margin_right = 1015.0
margin_bottom = 595.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemList" type="ItemList" parent="Inventory/Panel/InventoryList"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1006.0
margin_bottom = 583.0

[node name="MainButtonHandle" type="Node2D" parent="."]
z_index = 5

[node name="InventoryButton" type="Button" parent="MainButtonHandle"]
margin_left = 5.38257
margin_top = 73.417
margin_right = 98.3826
margin_bottom = 116.417
text = "Inventory"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CraftingButton" type="Button" parent="MainButtonHandle"]
margin_left = 5.38257
margin_top = 121.348
margin_right = 98.3826
margin_bottom = 164.348
text = "Crafting"
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatsButton" type="Button" parent="MainButtonHandle"]
margin_left = 5.38257
margin_top = 24.3342
margin_right = 98.3826
margin_bottom = 67.3342
text = "Stats"
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}
